# SpectraQuant

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
notebooks/: 01_data_fetch.ipynb
src/: vectorbt_learning.py
src/cli/: __init__.py  data.py
src/data/: __init__.py  fetch.py  save.py
src/indicators/: trend.py
