[project]
name = "spectraquant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.39.4",
    "anywidget>=0.9.18",
    "backtrader>=1.9.78.123",
    "click>=8.1.8",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.1",
    "notebook>=7.4.0",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pywavelets>=1.8.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "vadersentiment>=3.3.2",
    "vectorbt>=0.27.1",
    "websockets>=15.0.1",
    "yfinance>=0.2.55",
]

[project.scripts]
sq = "cli:entry"
